<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/login"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".actividad.LoginActivity">
<!-- -->
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_gravity="center_vertical"
        android:layout_height="fill_parent"
        android:gravity="center">
        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#798e8b90"
            android:orientation="vertical"
            android:padding="30dp">

            <EditText
                android:textColorHint="#798e8b90"
                android:background="#ffffff"
                android:textSize="15dp"
                android:textColor="#000000"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginBottom="1dp"
                android:id="@+id/nombre"
                android:hint="@string/prompt_user"
                android:padding="8dp"/>

            <EditText
                android:padding="8dp"
                android:textColorHint="#798e8b90"
                android:background="#ffffff"
                android:textColor="#000000"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_width="250dp"
                android:id="@+id/password"
                android:hint="@string/prompt_password"
                android:layout_marginTop="5dp"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

            <Button
                android:textColor="#ffffff"
                android:background="#00A79D"
                android:layout_marginTop="30dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:id="@+id/email_sign_in_button"
                 />

            <Button
                android:textColor="#ffffff"
                android:background="#27926D"
                android:layout_marginTop="10dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="Registrate"
                android:id="@+id/sign_up_button"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

